--- a/pub/css/layout.css
+++ b/pub/css/layout.css
@@ -19,15 +19,17 @@
    1920px 이상 (데스크탑)
 ----------------------------------- */
 header{position:fixed;top:0;left:0;width:100%;height:80px;z-index:10;background-color:var(--white);box-sizing:border-box;}
-header.hover .header_area{background:var(--white);padding:0 120px 64px;}
-header.hover .header_area .depth2{display:block;}
+header.active .header_area{background:var(--white);padding:0 120px 64px;}
+header.active .header_area .depth2{display:block;}
 
-.header_area{position:relative; width:100%;background-color:var(--white);padding:0 120px;box-sizing:border-box;}
+.header_area{position:relative; width:100%;padding:0 120px;box-sizing:border-box;}
 .header_area::after{content:"";display:block;position:absolute; top:80px;left:0; width:100%; height:1px;border-bottom:1px solid #E2E2E2;}
 .header_area .inner{max-width:1920px;display:flex;justify-content:space-between;margin:0 auto;}
 .header_area .logo{display:flex;align-items:center; height:80px;}
 .header_area .logo a{display:block;width:120px;height:48px;}
 .header_area .logo a img{width:100%;height:100%;object-fit:contain;}
+.header_area .logo a .logo_block{display: block;}
+.header_area .logo a .logo_white{display: none;}
 .header_area .inner .header_right{display:flex;align-items:center;flex-grow:1;justify-content:space-between;}
 
 .header_area .gnb ul.depth1{display:flex;justify-content:space-between}
@@ -35,12 +37,10 @@ header.hover .header_area .depth2{display:block;}
 .header_area .gnb ul.depth1 > li > a{display:block;height:80px;line-height:80px;font-size:18px;font-weight:bold;color:var(--block); padding:0 50px; }
 .header_area .gnb ul.depth1 > li > a:hover{text-decoration:underline;text-underline-offset:1px;text-decoration-thickness:2px;}
 
-
 .header_area ul.depth2 {display:none;margin-top:36px;background-color:var(--white);}
 .header_area .gnb ul.depth2 > li > a{display:block;min-width:78px; font-size:16px;color:var(--block);line-height:19px;text-align:center;}
 .header_area .gnb ul.depth2 > li > a:hover{text-decoration:underline;text-underline-offset:1px;}
 .header_area .gnb ul.depth2 > li + li{margin-top:16px}
-
 
 .header_area .util {display:flex;}
 .header_area .util .lang_box{position:relative;}
@@ -51,6 +51,14 @@ header.hover .header_area .depth2{display:block;}
 .header_area .util .lang_box .lang_list li a{font-size:16px;color:#b3b3b3;line-height:19px;}
 .header_area .util .lang_box .lang_list li.selected a{color:var(--block);text-decoration:underline; text-underline-offset:2px;}
 .header_area .util .btn_menu{display:none;}
+
+header.white{background:transparent;}
+header.white .header_area::after{display: none;}
+header.white .logo a .logo_block{display: none;}
+header.white .logo a .logo_white{display: block;}
+header.white .header_area .gnb ul.depth1 > li > a{color:var(--white);}
+header.white .util .lang_box .lang_btn{background:url(../images/ico_language_w.png) 100% / 100% no-repeat;}
+
 
 header .lnb_wrap{display:none; position:fixed; top:0;left:0;width:100%;height:100%; background:var(--white);}
 header .lnb_wrap.open{display:block;}
