--- a/pub/css/layout.css
+++ b/pub/css/layout.css
@@ -23,7 +23,7 @@ header.active .header_area{background:var(--white);padding:0 120px 64px;}
 header.active .header_area .depth2{display:block;}
 
 .header_area{position:relative; width:100%;padding:0 120px;box-sizing:border-box;}
-.header_area::after{content:"";display:block;position:absolute; top:79px;left:0; width:100%; height:1px;border-bottom:1px solid #E2E2E2;}
+.header_area::after{content:"";display:block;position:absolute; bottom:0;left:0; width:100%; height:1px;border-bottom:1px solid #E2E2E2;}
 .header_area .inner{max-width:1920px;display:flex;justify-content:space-between;margin:0 auto;}
 .header_area .logo{display:flex;align-items:center; height:80px;}
 .header_area .logo a{display:block;width:120px;height:48px;}
@@ -82,8 +82,8 @@ header .lnb_wrap.open{display:block;}
    768px 이상 (테블릿)
 ----------------------------------- */
 @media (min-width:768px) and (max-width:1228px) {
+    header{height:auto}
     .header_area{padding:16px 38px;}
-    .header_area::after{top:64px;}
     .header_area .logo{height:auto;}
     .header_area .logo a{width:80px;height:32px;}
     .header_area .gnb{display:none;}
@@ -129,8 +129,8 @@ header .lnb_wrap.open{display:block;}
    모바일
 ----------------------------------- */
 @media (max-width:767px) {
+    header{height: 56px;}
     .header_area{padding:12px 24px;}
-    .header_area::after{top:56px;}
     .header_area .logo{height:auto;}
     .header_area .logo a{width:70px;height:28px;}
     .header_area .gnb{display:none;}
