--- a/pub/css/layout.css
+++ b/pub/css/layout.css
@@ -7,7 +7,7 @@
     font-style:normal;
 }
 :root{
-    --block:#000;
+    --black:#000;
     --white:#fff;
 }
 
@@ -34,11 +34,11 @@ header.active .header_area .depth2{display:block;}
 
 .header_area .gnb ul.depth1{display:flex;justify-content:space-between}
 .header_area .gnb ul.depth1 > li{position:relative;}
-.header_area .gnb ul.depth1 > li > a{display:block;height:80px;line-height:80px;font-size:18px;font-weight:bold;color:var(--block); padding:0 50px; }
+.header_area .gnb ul.depth1 > li > a{display:block;height:80px;line-height:80px;font-size:18px;font-weight:bold;color:var(--black); padding:0 50px; }
 .header_area .gnb ul.depth1 > li > a:hover{text-decoration:underline;text-underline-offset:1px;text-decoration-thickness:2px;}
 
 .header_area ul.depth2 {display:none;margin-top:36px;background-color:var(--white);}
-.header_area .gnb ul.depth2 > li > a{display:block;min-width:78px; font-size:16px;color:var(--block);line-height:19px;text-align:center;}
+.header_area .gnb ul.depth2 > li > a{display:block;min-width:78px; font-size:16px;color:var(--black);line-height:19px;text-align:center;}
 .header_area .gnb ul.depth2 > li > a:hover{text-decoration:underline;text-underline-offset:1px;}
 .header_area .gnb ul.depth2 > li + li{margin-top:16px}
 
@@ -49,7 +49,7 @@ header.active .header_area .depth2{display:block;}
 .header_area .util .lang_box .lang_list{padding:16px 24px;border-radius:8px;background-color:var(--white);}
 .header_area .util .lang_box .lang_list li + li{margin-top:12px}
 .header_area .util .lang_box .lang_list li a{font-size:16px;color:#b3b3b3;line-height:19px;}
-.header_area .util .lang_box .lang_list li.selected a{color:var(--block);text-decoration:underline; text-underline-offset:2px;}
+.header_area .util .lang_box .lang_list li.selected a{color:var(--black);text-decoration:underline; text-underline-offset:2px;}
 .header_area .util .btn_menu{display:none;}
 
 header.white{background:transparent;}
@@ -63,7 +63,7 @@ header.white .util .lang_box .lang_btn{background:url(../images/ico_language_w.p
 header .lnb_wrap{display:none; position:fixed; top:0;left:0;width:100%;height:100%; background:var(--white);}
 header .lnb_wrap.open{display:block;}
 
-.footer{background-color:var(--block);color:var(--white)}
+.footer{background-color:var(--black);color:var(--white)}
 .footer .footer_inner{max-width:1920px;margin:0 auto;padding:48px 180px;box-sizing: border-box;}
 .footer .footer_top{display:flex;justify-content:space-between}
 .footer .footer_company{font-size:18px;font-weight:700;line-height:28px;}
@@ -100,17 +100,17 @@ header .lnb_wrap.open{display:block;}
     .lnb_wrap .lnb_top .lnb_util{display:flex;align-items:center;gap:12px;}
     .lnb_wrap .lnb_top .lnb_util .lang{display:flex;gap:8px;}
     .lnb_wrap .lnb_top .lnb_util .lang li a{font-size:14px;line-height:17px;color:#b3b3b3;}
-    .lnb_wrap .lnb_top .lnb_util .lang li.selected a{color:var(--block);text-decoration:underline; text-underline-offset:2px;}
+    .lnb_wrap .lnb_top .lnb_util .lang li.selected a{color:var(--black);text-decoration:underline; text-underline-offset:2px;}
     .lnb_wrap .lnb_top .btn_close{width:32px;height:32px;background:url(../images/btn_close_32.png) 100% / 100% no-repeat}
     .lnb_wrap .lnb_content{overflow-y:auto;height:calc(100% - 64px);}
     .lnb_wrap .lnb_nav{padding:36px 38px 64px}
     .lnb_wrap .lnb_nav .depth1 > li{margin-bottom:36px;}
     .lnb_wrap .lnb_nav .depth1 > li:last-child{margin-bottom:0;}
-    .lnb_wrap .lnb_nav .depth1 > li .toggle_tit{display:flex;justify-content:space-between;align-items:center;width:100%;font-size:20px;font-weight:700;color:var(--block);}
+    .lnb_wrap .lnb_nav .depth1 > li .toggle_tit{display:flex;justify-content:space-between;align-items:center;width:100%;font-size:20px;font-weight:700;color:var(--black);}
     .lnb_wrap .lnb_nav .depth1 > li .toggle_tit .ico_arr{display: block;width: 28px;height: 28px;background: url(../images/ico_arr_down.png) 100% / 100% no-repeat;transform: rotateX(180deg);}
     .lnb_wrap .lnb_nav li .depth2{display: none; margin-top:12px}
     .lnb_wrap .lnb_nav li .depth2 li + li {margin-top:12px}
-    .lnb_wrap .lnb_nav li .depth2 li a{display: block; color:var(--block);font-size:16px;line-height: 19px;}
+    .lnb_wrap .lnb_nav li .depth2 li a{display: block; color:var(--black);font-size:16px;line-height: 19px;}
     .lnb_wrap .lnb_nav .depth1 > li.active .toggle_tit .ico_arr{transform: rotateX(0);}
     .lnb_wrap .lnb_nav .depth1 > li.active .depth2{display: block;}
 
@@ -147,17 +147,17 @@ header .lnb_wrap.open{display:block;}
     .lnb_wrap .lnb_top .lnb_util{display:flex;align-items:center;gap:8px;}
     .lnb_wrap .lnb_top .lnb_util .lang{display:flex;gap:6px;}
     .lnb_wrap .lnb_top .lnb_util .lang li a{font-size:13px;line-height:16px;color:#b3b3b3;}
-    .lnb_wrap .lnb_top .lnb_util .lang li.selected a{color:var(--block);text-decoration:underline; text-underline-offset:2px;}
+    .lnb_wrap .lnb_top .lnb_util .lang li.selected a{color:var(--black);text-decoration:underline; text-underline-offset:2px;}
     .lnb_wrap .lnb_top .btn_close{width:32px;height:32px;background:url(../images/btn_close_32.png) 100% / 100% no-repeat}
     .lnb_wrap .lnb_content{overflow-y:auto;height:calc(100% - 64px);}
     .lnb_wrap .lnb_nav{padding:24px 24px 36px}
     .lnb_wrap .lnb_nav .depth1 > li{margin-bottom:24px;}
     .lnb_wrap .lnb_nav .depth1 > li:last-child{margin-bottom:0;}
-    .lnb_wrap .lnb_nav .depth1 > li .toggle_tit{display:flex;justify-content:space-between;align-items:center;width:100%;font-size:18px;font-weight:700;color:var(--block);}
+    .lnb_wrap .lnb_nav .depth1 > li .toggle_tit{display:flex;justify-content:space-between;align-items:center;width:100%;font-size:18px;font-weight:700;color:var(--black);}
     .lnb_wrap .lnb_nav .depth1 > li .toggle_tit .ico_arr{display: block;width: 28px;height: 28px;background: url(../images/ico_arr_down.png) 100% / 100% no-repeat;transform: rotateX(180deg);}
     .lnb_wrap .lnb_nav li .depth2{display: none; margin-top:12px}
     .lnb_wrap .lnb_nav li .depth2 li + li {margin-top:8px}
-    .lnb_wrap .lnb_nav li .depth2 li a{display: block; color:var(--block);font-size:14px;line-height: 17px;}
+    .lnb_wrap .lnb_nav li .depth2 li a{display: block; color:var(--black);font-size:14px;line-height: 17px;}
     .lnb_wrap .lnb_nav .depth1 > li.active .toggle_tit .ico_arr{transform: rotateX(0);}
     .lnb_wrap .lnb_nav .depth1 > li.active .depth2{display: block;}
 
