feat: 품질경영시스템 모달창 - modal_practice 클래스를 지닌 모달창에 대한 close 버튼 추가 JS 제작 - reset.css > 임시 웹폰트 Pretendard 추가 - modal_img 폴더 추가 > 모달에 대한 이미지만 담을 것 - 회사소개 기술인증1 모달 제작 - 해당 크기의 모달 practice - 변경 및 추가 시, 주석 추가 요망

--- a/pub/css/reset.css
+++ b/pub/css/reset.css
@@ -20,6 +20,35 @@ time, mark, audio, video {
 	vertical-align: baseline;
   text-decoration: none;
 }
+/* --------------------
+  임시 웹폰트 호출
+  -------------------- */
+@font-face {
+  font-family: 'Pretendard';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/pretendard@1.0/Pretendard-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Pretendard';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/pretendard@1.0/Pretendard-SemiBold.woff2') format('woff2');
+  font-weight: 600;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/pretendard@1.0/Pretendard-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-display: swap;
+}
+
+body {
+  font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+/* --------------------
+  // 임시 웹폰트 호출
+  -------------------- */
 button {
     background: none;
     border: none;
