--- a/pub/css/layout.css
+++ b/pub/css/layout.css
@@ -10,7 +10,7 @@ header.active .header_area .depth2{display:block;}
 
 .header_area{position:relative;padding:0 120px;box-sizing:border-box;margin:0 auto;}
 .header_area::after{content:"";display:block;position:absolute;top:79px;bottom:0;left:0; width:100%; height:1px;border-bottom:1px solid #E2E2E2;}
-.header_area .inner{display:flex;justify-content:space-between;}
+.header_area .inner{display:flex;justify-content:space-between;max-width: 1920px;margin:0 auto}
 .header_area .logo{display:flex;align-items:center; height:80px;}
 .header_area .logo a{display:block;width:120px;height:48px;}
 .header_area .logo a img{width:100%;height:100%;object-fit:contain;}
