--- a/pub/css/common.css
+++ b/pub/css/common.css
@@ -14,8 +14,95 @@
 
 .wrap{width:100%;margin:0 auto;}
 .blind {position:absolute;overflow:hidden;width:1px;height:1px;margin:-1px;padding:0;clip:rect(0,0,0,0);}
+.btn_round{display:inline-flex;height:56px;line-height:54px;border:1px solid var(--black);border-radius:60px;box-sizing: border-box;font-size:18px;font-weight:500;text-align: center;}
+.btn_round a,
+.btn_round button{color:var(--black);padding:0 32px}
 
 
+.company_wrap{max-width:1920px;margin:0 auto}
+.company_wrap .section_top .section_tit{font-size:32px;font-weight:700;color:var(--black);line-height:38px;}
+.company_intro{margin-top:100px}
+.company_intro .intro_txt_area .intro_tit{text-align:center;color:var(--black);font-size:48px;font-weight:700;line-height:62px;}
+.company_intro .intro_txt_area .intro_desc{display:block;text-align:center;max-width:633px;margin:24px auto 0;color:var(--black);font-size:18px;font-weight:400;line-height:28px;word-break:keep-all;}
+.company_intro .intro_list {margin-top:64px;overflow:hidden;position:relative;}
+.company_intro .intro_list .flow_item_group{display:flex;gap:24px;width:max-content;animation:flowScroll 20s linear infinite;}
+.company_intro .intro_list .slide_item{max-width:504px;width:100%;max-height:284px;border-radius:24px}
+.company_intro .intro_list .slide_item img{display:block;width:100%;height:auto}
+@keyframes flowScroll {
+  0% {
+    transform:translateX(0);
+  }
+  100% {
+    transform:translateX(-50%);
+  }
+}
+/* 컴퍼니 공통 레이아웃 */
+.company_wrap .section_inner{display:flex;justify-content:space-between;flex-wrap:wrap;gap:64px;padding:0 180px}
+.company_wrap .con_box {width:1164px;}
+
+.company_info{padding:100px 0}
+.company_info .company_detail .company_info_list{display:flex;flex-wrap:wrap;gap:24px}
+.company_info .company_detail .company_info_list .info_item{display:flex;flex-direction:column;gap:16px;width:372px;height:165px;box-sizing:border-box;border-radius:24px;padding:36px;background:#f9f9fc;}
+.company_info .company_detail .company_info_list .info_label{color:var(--black);font-size:24px;font-weight:700;}
+.company_info .company_detail .company_info_list .info_value{color:var(--black);font-size:16px;line-height:24px;}
+
+.ceo_message{padding:100px 0;color:var(--white);background:var(--black);}
+.ceo_message .section_top .section_tit{color:var(--white)}
+.ceo_message .message_cont .message_txt p{font-size:18px;line-height:32px;font-weight:400;}
+.ceo_message .message_cont .message_txt p + p{margin-top:36px}
+.ceo_message .message_cont .message_sign{display:block;margin-top:36px;text-align:right;font-size:18px;font-weight:700;}
+
+.philosophy{padding:100px 0}
+.philosophy .philosophy_list{display:flex;gap:24px}
+.philosophy .philosophy_list .item{display:flex;flex-wrap:wrap;gap:36px;padding:48px 36px;border-radius:24px;box-sizing:border-box;background-color:#F9F9FC;}
+.philosophy .philosophy_list .item::before{content:'';display:block;width:32px;height:32px;border:1px solid red;box-sizing:border-box;}
+.philosophy .philosophy_list .philosophy_tit{color:var(--black);font-size:24px;font-weight:700;}
+.philosophy .philosophy_list .philosophy_desc{margin-top:12px;color:var(--black);font-size:16px;line-height:24px;}
+
+.certification{padding:100px 0;background:var(--black);}
+.certification .section_top .section_tit{color:var(--white)}
+.certification .cert_list {display:flex;gap:24px}
+.certification .cert_list .cert_item {flex:1;height:496px;}
+.certification .cert_list .cert_link{position: relative; display:block;width:100%;height:100%;background:var(--white);border-radius:24px;box-sizing:border-box;padding:36px;color:var(--black)}
+.certification .cert_list .cert_link .txt_box{}
+.certification .cert_list .cert_link .cert_tit{font-size:24px;font-weight:700;line-height: 29px;}
+.certification .cert_list .cert_link .cert_desc{margin-top:24px;font-size:16px;line-height: 26px;}
+.certification .cert_list .cert_link .cert_icon{position: absolute;bottom: 36px;right: 36px; display:block; width:52px;height:52px;border-radius: 100%;border:1px solid var(--black);background: url(../images/ico_plus.png) 50% 50% / 21px 24px no-repeat;transition: 0.2s;}
+.certification .cert_list .cert_link:hover .cert_icon{transform: rotate(720deg);}
+
+.company_ci{padding:100px 0 104px 0}
+.company_ci .ci_area .ci_logo{display: grid;grid-template-columns: 1fr 1fr;grid-template-rows: auto auto;gap:24px}
+.company_ci .ci_area .ci_logo .ci_shape{display:flex;justify-content: center;align-items: center; border-radius:24px; background: #F9F9FC;}
+.company_ci .ci_area .ci_logo .ci_shape .img_logo{display: block;}
+.company_ci .ci_area .ci_logo .ci_shape img{width:100%; height: 100%;}
+.company_ci .ci_area .ci_logo .ci_shape01{ grid-column: 1 / 2;grid-row: 1 / 3; width:570px; height:570px;}
+.company_ci .ci_area .ci_logo .ci_shape01 .img_logo{width:334px;}
+.company_ci .ci_area .ci_logo .ci_shape02{grid-column: 2 / 3;grid-row: 1 / 2; width: 570px;height: 273px;}
+.company_ci .ci_area .ci_logo .ci_shape02 .img_logo{width:100px;}
+.company_ci .ci_area .ci_logo .ci_shape03{grid-column: 2 / 3;grid-row: 2 / 3; width: 570px;height: 273px;}
+.company_ci .ci_area .ci_logo .ci_shape03 .img_logo{width:195px;}
+.company_ci .ci_area .ci_desc{margin-top:24px;font-size:18px;line-height: 28px;}
+.company_ci .ci_area .ci_btn_wrap{margin-top:24px;display:flex;gap:16px}
+
+.history_area .tit_box{display: flex;justify-content: space-between;align-items: center;}
+.history_area .swiper_btn_box{display: flex;align-items:flex-end; gap:16px}
+.history_area .swiper_btn_box .swiper_btn{position: inherit;width:56px;height:56px;margin-top:0}
+.history_area .swiper_btn_box .swiper_btn::after{display: none;}
+.history_area .swiper_btn_box .swiper-button-prev{background: url(../images/img_arr_left_52.png) 100%/ 100% no-repeat;}
+.history_area .swiper_btn_box .swiper-button-next{background: url(../images/img_arr_right_52.png) 100%/ 100% no-repeat;}
+.history_area .swiper_btn_box .swiper_btn.swiper-button-disabled{opacity: 0.3;}
+.history_area .swiper-pagination{position:inherit;margin-top:30px;height: 3px;background: rgba(0, 0, 0, 0.20);}
+.history_area .swiper-pagination-progressbar .swiper-pagination-progressbar-fill{background: var(--black);}
+.history_area{padding:100px 0}
+.history_area .inner{padding:0 180px}
+.history_area .history_con{margin-top:34px;overflow: hidden;}
+.history_area .history_con .history_item{max-width: 504px;margin-right: 24px;}
+.history_area .history_con .history_item:last-child{margin-right: 0;}
+.history_area .history_con .history_period{color:var(--black);font-size:24px;font-weight:700;line-height: 29px;}
+.history_area .history_con .history_list{margin-top:16px}
+.history_area .history_list li{display: flex;gap:12px}
+.history_area .history_list .history_date{display:block; width:80px;color:#949494;font-size:18px;font-weight:500;line-height:38px;}
+.history_area .history_list .history_desc{color:var(--black);font-size:18px;font-weight:400;line-height: 38px;}
 
 /* -----------------------------------
    테블릿
