--- a/pub/css/reset.css
+++ b/pub/css/reset.css
@@ -52,6 +52,10 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
+a{
+	color: inherit;
+	text-decoration: none;
+}
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
