--- a/pub/css/product.css
+++ b/pub/css/product.css
@@ -8,7 +8,9 @@
 /* -----------------------------------
    제품소개 페이지
 ----------------------------------- */
-.inner{margin: 64px 38px 36px;}
+.inner{margin: 64px 120px 36px;}
+.interval_wrap{margin: 0 38px;}
+.interval_wrap.sub{margin-right: 0}
 .inner_visual{margin: 0 auto; display: flex;align-items: center; justify-content: center;border-radius: 16px; background: url("../../pub/images/product/product_back.png") 100% / 100% no-repeat; max-width: 1680px; height: 452px;}
 .inner_visual .visual_tit{font-size: var(--font48);line-height: normal;color: var(--white);text-align: center;font-weight: 700;}
 
@@ -78,13 +80,13 @@
 
 /* 썸네일 라인업 */
 .product_thumb_swiper{width:100%;padding:16px 0;border-radius:20px;background:#fff;}
-.product_thumb_swiper .swiper-wrapper{max-width: 1560px; margin: 0 auto; gap: 24px;align-items:stretch;}
+.product_thumb_swiper .swiper-wrapper{max-width: 1560px;align-items:stretch;margin:0 auto;}
 /* 추가 */
 .product_thumb_swiper .swiper-slide{display:flex;}
 .product_thumb_swiper .swiper-slide .product_thumb_item{display:flex;flex-direction:column;justify-content:space-between;height:100%;}
 
 /* 한 개 썸네일의 기본 폭 */
-.product_thumb_swiper .swiper-slide{width:180px; border:1px solid #E2E2EC;border-radius: 20px;overflow: hidden;margin: 0 !important;padding: 16px;box-sizing: border-box;cursor: pointer;}
+.product_thumb_swiper .swiper-slide{width:180px; border:1px solid #E2E2EC;border-radius: 20px;overflow: hidden;padding: 16px;box-sizing: border-box;cursor: pointer;}
 .product_thumb_swiper .swiper-slide-thumb-active{border:1px solid var(--black);border-radius: 20px;}
 .product_thumb_item{display:flex;flex-direction:column;align-items:flex-start;width:100%;gap: 16px;}
 .product_thumb_img{display:flex;justify-content: center;width:100%;height:136px;overflow:hidden;}
@@ -96,6 +98,7 @@
 ----------------------------------- */
 
 @media (max-width:1228px) {
+  .inner{margin: 36px 36px 64px;}
   .inner_visual{background: url("../../pub/images/product/product_back_tbl.png") 100% / 100% no-repeat;height: 226px;}
   .inner_visual .visual_tit{font-size: var(--font32);}
 
@@ -110,6 +113,7 @@
   .inner_content .inner_tab .inner_tab_list .inner_tab_item span{font-size:var(--font14);padding: 12px 22px;}
 
   .content_search_box .inner_search_input{font-size: var(--font16);line-height: 20px;padding: 14px 86px 14px 24px;}
+  .product_tab_panels .product_tab_result{margin: 0 180px;}
   .product_tab_panels .product_tab_result strong{font-size: var(--font24);line-height:34px;margin-bottom: 12px;}
   .product_tab_panels .product_tab_result .result_text{font-size: var(--font16);line-height:24px;}
   .product_tab_panels .product_card{padding: 24px;gap: 16px;}
@@ -126,7 +130,6 @@
   .product_main_prev,
   .product_main_next{display: none !important;}
   .product_thumb_swiper{}
-  .product_thumb_swiper .swiper-wrapper{gap: 16px;}
 }
 
 
