--- a/pub/css/pr_center.css
+++ b/pub/css/pr_center.css
@@ -2,4 +2,45 @@
 .pr_center_wrap{max-width:1920px;margin:0 auto;padding-bottom: 0;}
 
 
+/* ------------------------------
+    홍보센터 전시회 참가
+  ------------------------------ */
+/* 메인 비주얼 */
+.inner_visual{margin: 0 auto; display: flex;align-items: center; justify-content: center;border-radius: 16px; background: url("../../pub/images/pr/pr_exh_visual.png") 100% / 100% no-repeat; max-width: 1680px; height: 452px;}
 
+
+
+@media (max-width:1228px) {
+
+}
+@media (max-width:768px) {
+
+}
+
+
+/* ------------------------------
+    홍보센터 카탈로그
+  ------------------------------ */
+
+
+
+@media (max-width:1228px) {
+
+}
+@media (max-width:768px) {
+
+}
+
+
+/* ------------------------------
+    홍보센터 뉴스
+  ------------------------------ */
+
+
+
+@media (max-width:1228px) {
+
+}
+@media (max-width:768px) {
+
+}
