--- a/pub/css/pr_center.css
+++ b/pub/css/pr_center.css
@@ -6,7 +6,7 @@
     홍보센터 전시회 참가
   ------------------------------ */
 /* 메인 비주얼 */
-.inner_visual{margin: 0 auto; display: flex;align-items: center; justify-content: center;border-radius: 16px; background: url("../../pub/images/pr/pr_exh_visual.png") 100% / 100% no-repeat; max-width: 1680px; height: 452px;}
+.inner_visual{margin: 0 auto; display: flex;align-items: center; justify-content: center;border-radius: 16px; background: url("../../pub/images/pr/pr_exh_visual.png") 100% / 100% no-repeat; max-width: 1680px; padding:9.559% 0;}
 
 
 
