--- a/pub/css/customer.css
+++ b/pub/css/customer.css
@@ -6,7 +6,9 @@
     홍보센터 전시회 참가
   ------------------------------ */
 /* 메인 비주얼 */
-.inner_visual{margin: 0 auto; display: flex;align-items: center; justify-content: center;border-radius: 16px; background: url("../../pub/images/customer/bg_customer.png") 100% / 100% no-repeat; max-width: 1680px; padding:9.559% 0;}
+.visual_box{margin: 0 auto; display: flex;align-items: center; justify-content: center;border-radius: 16px; background: url("../../pub/images/customer/bg_customer.png") 100% / 100% no-repeat; max-width: 1680px; padding:9.559% 0;}
+.customer_tab_panels_wrap{margin:64px auto 0;max-width:1680px;}
+.map_area{position: relative; width: 100%;max-height: 552px; aspect-ratio: 1680 / 552;box-sizing: border-box;border-radius: 24px;overflow:hidden;}
 
 
 
