--- a/pub/css/common.css
+++ b/pub/css/common.css
@@ -1,7 +1,6 @@
 @charset "utf-8";
 @import url(./reset.css);
 @import url(./layout.css);
-@import url(./common.css);
 
 /* 공통 요소 */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@@ -43,10 +42,10 @@
 .wrap{width:100%;margin:0 auto;}
 .rtl_txt{direction: rtl;unicode-bidi: bidi-override;}
 .blind {position:absolute;overflow:hidden;width:1px;height:1px;margin:-1px;padding:0;clip:rect(0,0,0,0);}
-.btn_round{display:inline-flex;height:56px;line-height:54px;border:1px solid var(--black);border-radius:60px;box-sizing: border-box;font-size:18px;font-weight:500;text-align: center;}
+.btn_round{display:inline-flex;height:56px;border:1px solid var(--black);border-radius:60px;box-sizing: border-box;font-size:18px;font-weight:500;text-align: center;}
 .btn_round a,
-.btn_round button{color:var(--black);padding:0 32px}
-
+.btn_round button{color:var(--black);font-size: 18px;font-weight: 500;padding:0 32px;line-height:54px}
+.required{color:#F00}
 
 /* 상세페이지 */
 .cont_detail_wrap{max-width:1920px;margin:0 auto;padding:80px 180px 100px;box-sizing: border-box;}
@@ -78,26 +77,26 @@
 
  /*  제품소개 및 홍보센터 등 비주얼 메인  */
 .contents .visual_box{margin: 64px 120px 0;}
-.inner_content .section_inner{margin: 0 120px 0;}
+.cont_box .section_inner{margin: 0 120px 0;}
 
 /* 공통 탭 리스트*/
 .contents.products_wrap{overflow: hidden;}
 .visual_inner{margin: 0 auto; display: flex;align-items: center;justify-content: center;max-width: 1680px;height: 452px;border-radius: 16px;}
 .visual_box .visual_tit{font-size: var(--font48);line-height: normal;color: var(--white);text-align: center;font-weight: 700;}
 
-.inner_content .content_tab_box{display: flex; align-items: center; justify-content: space-between; margin: 36px auto 0;padding: 16px 0; max-width: 1560px; box-sizing: border-box;}
-.inner_content .breadcrumb{display: flex;align-items: center;}
-.inner_content .breadcrumb i.guide_home{display: block;width: 18px;height: 16px;background-repeat: no-repeat;background-image: url("data:image/svg+xml,%0A%3Csvg width='18' height='16' viewBox='0 0 18 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17.9688 8C17.9688 8.5625 17.5 9 16.9688 9H15.9688L16 14C16 14.0938 16 14.1875 16 14.25V14.75C16 15.4688 15.4375 16 14.75 16H14.25C14.1875 16 14.1562 16 14.125 16C14.0938 16 14.0312 16 14 16H13H12.25C11.5312 16 11 15.4688 11 14.75V14V12C11 11.4688 10.5312 11 10 11H8C7.4375 11 7 11.4688 7 12V14V14.75C7 15.4688 6.4375 16 5.75 16H5H4C3.9375 16 3.90625 16 3.84375 16C3.8125 16 3.78125 16 3.75 16H3.25C2.53125 16 2 15.4688 2 14.75V11.25C2 11.25 2 11.2188 2 11.1875V9H1C0.4375 9 0 8.5625 0 8C0 7.71875 0.09375 7.46875 0.3125 7.25L8.3125 0.25C8.53125 0.03125 8.78125 0 9 0C9.21875 0 9.46875 0.0625 9.65625 0.21875L17.625 7.25C17.875 7.46875 18 7.71875 17.9688 8Z' fill='black'/%3E%3C/svg%3E%0A");}
-.inner_content .breadcrumb .breadcrumb_current{display: block;font-size: var(--font24);line-height: 30px;color: var(--black);text-align: center;font-weight: 700; padding-left: 34px; box-sizing: border-box; position: relative;}
-.inner_content .breadcrumb .breadcrumb_current::before{content: ""; display: block; clear: both; width: 10px; height: 16px; margin: 0 12px; position: absolute;left: 0;top: 50%; transform: translateY(-50%); background-repeat: no-repeat; background-position: center; background-image: url("data:image/svg+xml,%0A%3Csvg width='10' height='16' viewBox='0 0 7 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.90625 5.1875C6.09375 5.375 6.09375 5.71875 5.90625 5.90625L0.90625 10.9062C0.71875 11.0938 0.375 11.0938 0.1875 10.9062C0 10.7188 0 10.375 0.1875 10.1875L4.84375 5.53125L0.1875 0.90625C0 0.71875 0 0.375 0.1875 0.1875C0.375 0 0.71875 0 0.90625 0.1875L5.90625 5.1875Z' fill='%236E6E6E'/%3E%3C/svg%3E%0A");}
+.cont_box .content_tab_box{display: flex; align-items: center; justify-content: space-between; margin: 36px auto 0;padding: 16px 0; max-width: 1560px; box-sizing: border-box;}
+.cont_box .breadcrumb{display: flex;align-items: center;}
+.cont_box .breadcrumb i.guide_home{display: block;width: 18px;height: 16px;background-repeat: no-repeat;background-image: url("data:image/svg+xml,%0A%3Csvg width='18' height='16' viewBox='0 0 18 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17.9688 8C17.9688 8.5625 17.5 9 16.9688 9H15.9688L16 14C16 14.0938 16 14.1875 16 14.25V14.75C16 15.4688 15.4375 16 14.75 16H14.25C14.1875 16 14.1562 16 14.125 16C14.0938 16 14.0312 16 14 16H13H12.25C11.5312 16 11 15.4688 11 14.75V14V12C11 11.4688 10.5312 11 10 11H8C7.4375 11 7 11.4688 7 12V14V14.75C7 15.4688 6.4375 16 5.75 16H5H4C3.9375 16 3.90625 16 3.84375 16C3.8125 16 3.78125 16 3.75 16H3.25C2.53125 16 2 15.4688 2 14.75V11.25C2 11.25 2 11.2188 2 11.1875V9H1C0.4375 9 0 8.5625 0 8C0 7.71875 0.09375 7.46875 0.3125 7.25L8.3125 0.25C8.53125 0.03125 8.78125 0 9 0C9.21875 0 9.46875 0.0625 9.65625 0.21875L17.625 7.25C17.875 7.46875 18 7.71875 17.9688 8Z' fill='black'/%3E%3C/svg%3E%0A");}
+.cont_box .breadcrumb .breadcrumb_current{display: block;font-size: var(--font24);line-height: 30px;color: var(--black);text-align: center;font-weight: 700; padding-left: 34px; box-sizing: border-box; position: relative;}
+.cont_box .breadcrumb .breadcrumb_current::before{content: ""; display: block; clear: both; width: 10px; height: 16px; margin: 0 12px; position: absolute;left: 0;top: 50%; transform: translateY(-50%); background-repeat: no-repeat; background-position: center; background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='currentColor' d='M267.3 244.7c6.2 6.2 6.2 16.4 0 22.6l-160 160c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6L233.4 256 84.7 107.3c-6.2-6.2-6.2-16.4 0-22.6s16.4-6.2 22.6 0l160 160z'/%3E%3C/svg%3E");color:#6e6e6e}
 
 /* 탭 메뉴 */
 .inner_tab_panel{display: none; max-width: 1560px; margin: 0 auto;}
 .inner_tab_panel.is-active{display: block;}
-.inner_content .inner_tab .inner_tab_list{display: flex;flex-wrap: nowrap;}
-.inner_content .inner_tab .inner_tab_list .inner_tab_item{display: flex;flex-wrap: nowrap;}
-.inner_content .inner_tab .inner_tab_list .inner_tab_item span{display:block;font-size: var(--font16);line-height: 20px; font-weight: 500; color: var(--black);border-radius: 60px;box-sizing: border-box;padding: 14px 28px;cursor: pointer;}
-.inner_content .inner_tab .inner_tab_list .inner_tab_item.is-active span{color: var(--white);background-color: var(--black);}
+.cont_box .inner_tab .inner_tab_list{display: flex;flex-wrap: nowrap;}
+.cont_box .inner_tab .inner_tab_list .inner_tab_item{display: flex;flex-wrap: nowrap;}
+.cont_box .inner_tab .inner_tab_list .inner_tab_item span{display:block;font-size: var(--font16);line-height: 20px; font-weight: 500; color: var(--black);border-radius: 60px;box-sizing: border-box;padding: 14px 28px;cursor: pointer;}
+.cont_box .inner_tab .inner_tab_list .inner_tab_item.is-active span{color: var(--white);background-color: var(--black);}
 
 /* 검색창 */
 .content_search_box{display: flex;justify-content: flex-end;max-width: 1560px; margin:24px auto 0;box-sizing: border-box;}
@@ -111,7 +110,7 @@
 @media (min-width:768px) and (max-width:1228px) {
     .btn_round{height:48px;line-height:46px;font-size:16px}
     .btn_round a,
-    .btn_round button{padding:0 26px}
+    .btn_round button{padding:0 26px;line-height: 46px;}
 
     /* 상세페이지 */
     .cont_detail_wrap{padding:64px 38px;box-sizing: border-box;}
@@ -141,16 +140,16 @@
 
 
     /*  제품소개 및 홍보센터 등 비주얼 메인  */
-    .inner_content .breadcrumb i.guide_home{width: 16px;height: 14px;background-image: url("data:image/svg+xml,%0A%3Csvg width='16' height='14' viewBox='0 0 16 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15.7227 7C15.7227 7.49219 15.3125 7.875 14.8477 7.875H13.9727L14 12.25C14 12.332 14 12.4141 14 12.4688V12.9062C14 13.5352 13.5078 14 12.9062 14H12.4688C12.4141 14 12.3867 14 12.3594 14C12.332 14 12.2773 14 12.25 14H11.375H10.7188C10.0898 14 9.625 13.5352 9.625 12.9062V12.25V10.5C9.625 10.0352 9.21484 9.625 8.75 9.625H7C6.50781 9.625 6.125 10.0352 6.125 10.5V12.25V12.9062C6.125 13.5352 5.63281 14 5.03125 14H4.375H3.5C3.44531 14 3.41797 14 3.36328 14C3.33594 14 3.30859 14 3.28125 14H2.84375C2.21484 14 1.75 13.5352 1.75 12.9062V9.84375C1.75 9.84375 1.75 9.81641 1.75 9.78906V7.875H0.875C0.382812 7.875 0 7.49219 0 7C0 6.75391 0.0820312 6.53516 0.273438 6.34375L7.27344 0.21875C7.46484 0.0273438 7.68359 0 7.875 0C8.06641 0 8.28516 0.0546875 8.44922 0.191406L15.4219 6.34375C15.6406 6.53516 15.75 6.75391 15.7227 7Z' fill='black'/%3E%3C/svg%3E%0A");}
-    .inner_content .breadcrumb .breadcrumb_current{font-size: var(--font16);line-height:20px;}
-    .inner_content .breadcrumb .breadcrumb_current::before{width:9px;height: 14px;background-image: url("data:image/svg+xml,%0A%3Csvg width='9' height='14' viewBox='0 0 9 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.90625 5.1875C6.09375 5.375 6.09375 5.71875 5.90625 5.90625L0.90625 10.9062C0.71875 11.0938 0.375 11.0938 0.1875 10.9062C0 10.7188 0 10.375 0.1875 10.1875L4.84375 5.53125L0.1875 0.90625C0 0.71875 0 0.375 0.1875 0.1875C0.375 0 0.71875 0 0.90625 0.1875L5.90625 5.1875Z' fill='%236E6E6E'/%3E%3C/svg%3E%0A");}
-    .inner_content .inner_tab .inner_tab_list .inner_tab_item span{font-size:var(--font14);padding: 12px 22px;}
-
+    .cont_box .breadcrumb i.guide_home{width: 16px;height: 14px;background-image: url("data:image/svg+xml,%0A%3Csvg width='16' height='14' viewBox='0 0 16 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15.7227 7C15.7227 7.49219 15.3125 7.875 14.8477 7.875H13.9727L14 12.25C14 12.332 14 12.4141 14 12.4688V12.9062C14 13.5352 13.5078 14 12.9062 14H12.4688C12.4141 14 12.3867 14 12.3594 14C12.332 14 12.2773 14 12.25 14H11.375H10.7188C10.0898 14 9.625 13.5352 9.625 12.9062V12.25V10.5C9.625 10.0352 9.21484 9.625 8.75 9.625H7C6.50781 9.625 6.125 10.0352 6.125 10.5V12.25V12.9062C6.125 13.5352 5.63281 14 5.03125 14H4.375H3.5C3.44531 14 3.41797 14 3.36328 14C3.33594 14 3.30859 14 3.28125 14H2.84375C2.21484 14 1.75 13.5352 1.75 12.9062V9.84375C1.75 9.84375 1.75 9.81641 1.75 9.78906V7.875H0.875C0.382812 7.875 0 7.49219 0 7C0 6.75391 0.0820312 6.53516 0.273438 6.34375L7.27344 0.21875C7.46484 0.0273438 7.68359 0 7.875 0C8.06641 0 8.28516 0.0546875 8.44922 0.191406L15.4219 6.34375C15.6406 6.53516 15.75 6.75391 15.7227 7Z' fill='black'/%3E%3C/svg%3E%0A");}
+    .cont_box .breadcrumb .breadcrumb_current{font-size: var(--font16);line-height:20px;}
+    .cont_box .breadcrumb .breadcrumb_current::before{width:9px;height:100%;background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='currentColor' d='M267.3 244.7c6.2 6.2 6.2 16.4 0 22.6l-160 160c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6L233.4 256 84.7 107.3c-6.2-6.2-6.2-16.4 0-22.6s16.4-6.2 22.6 0l160 160z'/%3E%3C/svg%3E");}
+    .cont_box .inner_tab .inner_tab_list .inner_tab_item span{font-size:var(--font14);padding: 12px 22px;}
     .contents .visual_box{margin: 36px 38px 0;}
     .visual_box .visual_tit{font-size: var(--font32);}
     .contents .visual_inner{height: 226px; padding: 0;}
-    .inner_content .section_inner{margin: 0 38px 0;}
-    .inner_content .content_tab_box{margin-top: 16px;}
+    .cont_box .section_inner{margin: 0 38px 0;}
+    .cont_box .content_tab_box{margin: 16px auto 0;padding: 11px 0;}
+    .cont_box .inner_tab .inner_tab_list .inner_tab_item span{line-height: 18px;}
     .content_search_box{margin: 16px auto 0;}
 
 }
@@ -159,7 +158,7 @@
 @media (max-width:767px) {
     .btn_round{height:42px;line-height:40px;font-size:14px}
     .btn_round a,
-    .btn_round button{padding:0 22px}
+    .btn_round button{padding:0 22px;line-height: 40px;}
 
     /* 상세페이지 */
     .cont_detail_wrap{padding:56px 24px 36px}
@@ -192,14 +191,14 @@
     .contents .visual_inner{height: 136px; padding: 0;}
     .contents .visual_box{margin: 24px 24px 0;}
     .visual_inner .visual_tit{font-size: var(--font18);line-height: 22px;}
-    .inner_content .section_inner{margin: 0 24px 0;}
-    .inner_content .inner_tab {width: 100%;overflow-x: auto;overflow-y: hidden;}
-    .inner_content .inner_tab::-webkit-scrollbar {display: none;}
-    .inner_content .breadcrumb{display: none;}
-    .inner_content .content_tab_box{margin: 12px auto 0;}
+    .cont_box .section_inner{margin: 0 24px 0;}
+    .cont_box .inner_tab {width: 100%;overflow-x: auto;overflow-y: hidden;}
+    .cont_box .inner_tab::-webkit-scrollbar {display: none;}
+    .cont_box .breadcrumb{display: none;}
+    .cont_box .content_tab_box{margin: 12px auto 0;}
     .content_search_box{margin: 8px auto 0;}
     .content_search_box .inner_search_btn::before{width: 14px;height: 14px;background-image: url("data:image/svg+xml,%0A%3Csvg width='14' height='14' viewBox='0 0 14 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.0625 5.6875C10.0625 4.12891 9.21484 2.70703 7.875 1.91406C6.50781 1.12109 4.83984 1.12109 3.5 1.91406C2.13281 2.70703 1.3125 4.12891 1.3125 5.6875C1.3125 7.27344 2.13281 8.69531 3.5 9.48828C4.83984 10.2812 6.50781 10.2812 7.875 9.48828C9.21484 8.69531 10.0625 7.27344 10.0625 5.6875ZM9.21484 10.1719C8.23047 10.9375 7 11.375 5.6875 11.375C2.54297 11.375 0 8.83203 0 5.6875C0 2.57031 2.54297 0 5.6875 0C8.80469 0 11.375 2.57031 11.375 5.6875C11.375 7.02734 10.9102 8.25781 10.1445 9.24219L13.5352 12.6328L14 13.0977L13.0703 14L12.6055 13.5352L9.21484 10.1445V10.1719Z' fill='black'/%3E%3C/svg%3E%0A");}
-    .inner_content .inner_tab .inner_tab_list .inner_tab_item span{font-size:13px;padding: 10px 20px;word-break: keep-all;}
+    .cont_box .inner_tab .inner_tab_list .inner_tab_item span{font-size:13px;padding: 10px 20px;word-break: keep-all;}
     .content_search_box .inner_search_input{font-size: var(--font14);line-height: 18px;padding: 12px 82px 12px 22px;}
     .content_search_box .inner_search_btn{right: 22px;width: 14px;height: 14px;}
 
