--- a/pub/css/customer.css
+++ b/pub/css/customer.css
@@ -1,19 +1,62 @@
 @charset "utf-8";
-.pr_center_wrap{max-width:1920px;margin:0 auto;padding-bottom: 0;}
+.pr_center_wrap{max-width:1920px;margin:0 auto;padding-bottom:0;}
 
 
-/* ------------------------------
-    홍보센터 전시회 참가
-  ------------------------------ */
 /* 메인 비주얼 */
-.visual_box{margin: 0 auto; display: flex;align-items: center; justify-content: center;border-radius: 16px; background: url("../../pub/images/customer/bg_customer.png") 100% / 100% no-repeat; max-width: 1680px; height:452px}
+.visual_inner{margin:0 auto;display:flex;align-items:center;justify-content:center;border-radius:16px;background:url("../../pub/images/product/product_back.png") center / cover no-repeat;max-width:1680px;height:452px}
+
+/* INQUIRY */
 .customer_tab_panels_wrap{margin:64px auto 0;max-width:1680px;}
-.map_area{position: relative; width: 100%;max-height: 552px; aspect-ratio: 1680 / 552;box-sizing: border-box;border-radius: 24px;overflow:hidden;}
+.customer_tab_panels_wrap .inner_tab_panel{max-width: 1680px;}
+.map_area{position:relative;width:100%;max-height:552px;aspect-ratio:1680 / 552;box-sizing:border-box;border-radius:24px;overflow:hidden;}
+.cont_inquiry{margin-top:100px;display:flex;justify-content:space-between;gap:192px;box-sizing:border-box;padding:0 60px}
+.cont_inquiry .inquiry_info{}
+.cont_inquiry .inquiry_info .info_tit{color:var(--black);font-size:32px;font-weight:700;line-height:38px;}
+.cont_inquiry .inquiry_info .info_txt{font-size:18px;font-weight:700;line-height:32px;color:var(--black)}
+.cont_inquiry .inquiry_info .info_txt:first-of-type{margin-top:36px}
+.cont_inquiry .inquiry_form_area{max-width:1032px;}
+.cont_inquiry .inquiry_form_area .inquiry_guide p{font-size:18px;font-weight:700;line-height:28px;color:var(--black)}
+.inquiry_form_area .inquiry_form_list ul{display:flex;flex-wrap:wrap;gap:24px;margin-top:36px;}
+.inquiry_form_area .inquiry_form_list li{display:flex;width:calc(50% - 12px);gap:33px;}
+.inquiry_form_area .inquiry_form_list li:nth-child(7),
+.inquiry_form_area .inquiry_form_list li:nth-child(8){width:100%;}
+.inquiry_form_area .inquiry_form_list .inquiry_label{display:block;margin-top:20px;width:77px;color:var(--black);font-size:18px;font-weight:700;}
+.inquiry_form_area .inquiry_form_list .ipt,
+.inquiry_form_area .inquiry_form_list .text_area{flex:1;width:100%;}
+.inquiry_form_area .inquiry_form_list .ipt input{width:100%;height:56px;line-height:54px;padding:12px 28px;box-sizing:border-box;border-radius:100px;background:#f9f9fc;font-size:18px;font-weight: 400;}
+.inquiry_form_area .inquiry_form_list .text_area textarea{width:100%;height:168px;padding:20px 28px;line-height:21px;box-sizing:border-box;border-radius:28px;background:#f9f9fc;font-size:18px;font-weight: 400;}
+.inquiry_form_area .inquiry_form_list .ipt input::placeholder,
+.inquiry_form_area .inquiry_form_list .text_area textarea::placeholder{color:#D2D2DC}
 
-
+.agree_area{margin-top:36px;text-align: right;padding: 0 60px;}
+.agree_area .chk_ipt{margin-top:24px;display: flex;justify-content: flex-end;}
+.agree_area .chk_ipt input{ position: absolute;opacity: 0;width: 0;height: 0;}
+.agree_area .chk_ipt label{display: flex;gap:16px;align-items: center;cursor: pointer;}
+.agree_area .chk_ipt label .chk_box{position: relative; width: 16px;height: 16px;width: 16px;height: 16px;border:1px solid #e2e2e2;border-radius: 2px;box-sizing: border-box;}
+.agree_area .chk_ipt label .chk_box::before{position: absolute;top:-1px;left: -1px; content: "";display: block;width: 16px;height: 16px;background-color: #e2e2e2;cursor: pointer;mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512' fill='white'%3E%3Cpath d='M448.1 118.2L437 129.7 173.6 404l-11.5 12-11.5-12L11.1 258.8 0 247.2l23.1-22.2 11.1 11.5L162.1 369.8 414 107.5 425 96l23.1 22.2z'/%3E%3C/svg%3E");mask-size: 9px 10px;mask-position: center;mask-repeat: no-repeat;}
+.agree_area .chk_ipt input:checked ~ .chk_box{background-color:var(--black);border:1px solid var(--black)}
+.agree_area .chk_ipt .label_txt,
+.agree_area .chk_ipt .label_txt a{flex:1;color:var(--black);font-size:18px;line-height: 21px;}
+.agree_area .chk_ipt .label_txt a{text-decoration-line: underline; text-underline-offset: 2px;}
+.agree_area .btn_round{margin-top:24px}
 
 @media (max-width:1228px) {
+  .customer_tab_panels_wrap{margin:36px 38px 0}
+  .map_area{aspect-ratio: 692 / 330;border-radius: 16px;}
+  .cont_inquiry{margin-top:24px;padding:0;justify-content:normal;gap:0;flex-wrap:wrap;}
+  .cont_inquiry .inquiry_info{padding-bottom:36px;}
+  .cont_inquiry .inquiry_info .info_tit{font-size:24px;line-height:29px;}
+  .cont_inquiry .inquiry_info .info_txt:first-of-type{margin-top:16px}
+  .cont_inquiry .inquiry_info .info_txt {font-size: 16px;line-height:26px}
+  .cont_inquiry .inquiry_form_area{padding-top:36px;border-top:1px solid #E2E2E2}
+  .cont_inquiry .inquiry_form_area .inquiry_guide p{font-size:16px;line-height:24px;}
+  .inquiry_form_area .inquiry_form_list ul{gap:16px;margin-top:24px;}
+  .inquiry_form_area .inquiry_form_list li{width:calc(50% - 8px);gap:24px;}
+  .inquiry_form_area .inquiry_form_list .inquiry_label{margin-top:14px;width: 78px;font-size: 16px;}
+  .inquiry_form_area .inquiry_form_list .ipt input {height: 48px;line-height: 46px;padding: 12px 24px;font-size: 16px}
+  .inquiry_form_area .inquiry_form_list .text_area textarea{height:144px;padding:18px 28px;line-height:19px;border-radius:24px;font-size:16px}
 
+  .agree_area{padding:0;margin-top:24px}
 }
 @media (max-width:768px) {
 
