--- a/pub/css/reset.css
+++ b/pub/css/reset.css
@@ -11,15 +11,24 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+time, mark, audio, video, textarea, input {
 	margin: 0;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
 	font-family: 'Pretendard', 'Poppins', sans-serif;
 	vertical-align: baseline;
-  text-decoration: none;
+  	text-decoration: none;
+	font-style: normal;
+
 }
+input{    
+	text-decoration: none;
+    -webkit-text-size-adjust: none;
+    -webkit-appearance: none;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-font-smoothing: antialiased;
+    outline: none;}
 
 body {
   font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -60,3 +69,4 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+input,textarea{border:none;padding:0;resize: none;}
