--- a/pub/css/common.css
+++ b/pub/css/common.css
@@ -110,7 +110,7 @@
 @media (min-width:768px) and (max-width:1228px) {
     .btn_round{height:48px;line-height:46px;font-size:16px}
     .btn_round a,
-    .btn_round button{padding:0 26px;line-height: 46px;}
+    .btn_round button{padding:0 26px;line-height: 46px;font-size:16px}
 
     /* 상세페이지 */
     .cont_detail_wrap{padding:64px 38px;box-sizing: border-box;}
@@ -158,7 +158,7 @@
 @media (max-width:767px) {
     .btn_round{height:42px;line-height:40px;font-size:14px}
     .btn_round a,
-    .btn_round button{padding:0 22px;line-height: 40px;}
+    .btn_round button{padding:0 22px;line-height: 40px;font-size:14px;}
 
     /* 상세페이지 */
     .cont_detail_wrap{padding:56px 24px 36px}
@@ -195,10 +195,10 @@
     .cont_box .inner_tab {width: 100%;overflow-x: auto;overflow-y: hidden;}
     .cont_box .inner_tab::-webkit-scrollbar {display: none;}
     .cont_box .breadcrumb{display: none;}
-    .cont_box .content_tab_box{margin: 12px auto 0;}
+    .cont_box .content_tab_box{margin: 12px auto 0;padding:10px 0}
     .content_search_box{margin: 8px auto 0;}
     .content_search_box .inner_search_btn::before{width: 14px;height: 14px;background-image: url("data:image/svg+xml,%0A%3Csvg width='14' height='14' viewBox='0 0 14 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.0625 5.6875C10.0625 4.12891 9.21484 2.70703 7.875 1.91406C6.50781 1.12109 4.83984 1.12109 3.5 1.91406C2.13281 2.70703 1.3125 4.12891 1.3125 5.6875C1.3125 7.27344 2.13281 8.69531 3.5 9.48828C4.83984 10.2812 6.50781 10.2812 7.875 9.48828C9.21484 8.69531 10.0625 7.27344 10.0625 5.6875ZM9.21484 10.1719C8.23047 10.9375 7 11.375 5.6875 11.375C2.54297 11.375 0 8.83203 0 5.6875C0 2.57031 2.54297 0 5.6875 0C8.80469 0 11.375 2.57031 11.375 5.6875C11.375 7.02734 10.9102 8.25781 10.1445 9.24219L13.5352 12.6328L14 13.0977L13.0703 14L12.6055 13.5352L9.21484 10.1445V10.1719Z' fill='black'/%3E%3C/svg%3E%0A");}
-    .cont_box .inner_tab .inner_tab_list .inner_tab_item span{font-size:13px;padding: 10px 20px;word-break: keep-all;}
+    .cont_box .inner_tab .inner_tab_list .inner_tab_item span{font-size:13px;padding: 10px 20px;word-break: keep-all;line-height: 16px;}
     .content_search_box .inner_search_input{font-size: var(--font14);line-height: 18px;padding: 12px 82px 12px 22px;}
     .content_search_box .inner_search_btn{right: 22px;width: 14px;height: 14px;}
 
